--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Great+Vibes&family=Monsieur+La+Doulaise&family=Nunito&family=Ballet&family=Markazi+Text&family=Imperial+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Tinos&family=Parisienne&family=Mea+Culpa&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-    <link rel="stylesheet" href="Styles/CoupleIntroduction.css"/>
-    <link rel="stylesheet" href="Styles/FamilyIntroduction.css"/>
+    <link rel="stylesheet" href="Styles/CoupleIntroduction.css" />
+    <link rel="stylesheet" href="Styles/FamilyIntroduction.css" />
 
     <style>
         .break-quote {
@@ -53,11 +53,11 @@
         }
 
         .groom-photo {
-            background-image: url('Sources/Images/_NVT4543-2.jpg');
+            background-image: url('Sources/Images/_NVT4543-2.webp');
         }
 
         .bride-photo {
-            background-image: url('Sources/Images/_NVT4543-1.jpg');
+            background-image: url('Sources/Images/_NVT4543-1.webp');
         }
 
         /* ảnh cô dâu chú rể */
@@ -102,7 +102,6 @@
                 transform: none;
             }
         }
-
     </style>
     <style>
         * {
@@ -125,7 +124,7 @@
             position: relative;
             width: 100%;
             height: 85vh;
-            background: linear-gradient(to bottom, rgba(0,0,0,0) 60%, #000 100%), url('Sources/Images/_NVT4500.jpg') center/cover no-repeat;
+            background: linear-gradient(to bottom, rgba(0,0,0,0) 60%, #000 100%), url('Sources/Images/_NVT4500.webp') center/cover no-repeat;
             display: flex;
             flex-direction: column;
             justify-content: flex-end;
@@ -212,7 +211,7 @@
         .content {
             max-width: 650px;
             margin: 0 auto;
-/*            padding: 0 24px;*/
+            /*            padding: 0 24px;*/
         }
 
         .save-date {
@@ -315,7 +314,7 @@
         .calendar {
             position: relative;
             color: #fff; /* example text color */
-            background: url('Sources/Images/_NVT4701.jpg') center/cover no-repeat;
+            background: url('Sources/Images/_NVT4701.webp') center/cover no-repeat;
             overflow: hidden; /* ensures overlay stays inside */
             padding: 20px;
             margin: 30px 0 0 0;
@@ -725,9 +724,61 @@
                 text-align: left;
                 font-family: 'Tinos';
             }
-
+        }
+    </style>
+    <style>
+        /* Container that holds the whole scrolling system */
+        .film-container {
+            top: 200px;
+            left: 0;
+            width: 200%;
+            height: 300px;
+            animation: moveStrip 10s linear infinite;
+            rotate: -5deg;
         }
 
+        /* Row of random images */
+        .images-row {
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 100%;
+            display: flex;
+        }
+
+        .cell {
+            position: relative;
+            top: 34px;
+            left: 0px;
+            width: 184px;
+            height: 231px;
+            background-size: contain;
+            background-position: center;
+            margin: 0 8px;
+        }
+
+        /* Film overlay PNG */
+        .film-strip {
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 100%;
+            width: 100%;
+            background-image: url("https://uploads.onecompiler.io/4452bvfhw/4452cjbym/Film-removebg-preview.png");
+            background-repeat: repeat-x;
+            background-size: 200px 300px;
+            pointer-events: none; /* film overlay should not block anything */
+        }
+
+        @keyframes moveStrip {
+            0% {
+                transform: translateX(-50%);
+            }
+
+            100% {
+                transform: translateX(0);
+            }
+        }
     </style>
 </head>
 <body>
@@ -768,7 +819,7 @@
     </div>
 
     <div>
-        <img style="width:100%;" src='Sources/Images/_NVT4739.jpg' />
+        <img style="width:100%;" src='Sources/Images/_NVT4739.webp' />
     </div>
 
     <div class="family-section reveal fade-up">
@@ -856,6 +907,57 @@
             </a>
         </div>
     </div>
+
+    <div class="film-container">
+
+        <div class="film-strip"></div>
+        <div class="images-row" id="images"></div>
+
+    </div>
+
+    <script>
+        // Images you want to use
+        const imgs = [
+            "Sources/Images/Rolls/_NVT3765.webp",
+            "Sources/Images/Rolls/_NVT3825.webp",
+            "Sources/Images/Rolls/_NVT3887.webp",
+            "Sources/Images/Rolls/_NVT3955.webp",
+            "Sources/Images/Rolls/_NVT4011.webp",
+            "Sources/Images/Rolls/_NVT4120.webp",
+            "Sources/Images/Rolls/_NVT4159.webp",
+            "Sources/Images/Rolls/_NVT4203.webp",
+            "Sources/Images/Rolls/_NVT4209.webp",
+            "Sources/Images/Rolls/_NVT4216.webp",
+            "Sources/Images/Rolls/_NVT4298.webp",
+            "Sources/Images/Rolls/_NVT4457.webp",
+            "Sources/Images/Rolls/_NVT4500.webp",
+            "Sources/Images/Rolls/_NVT4536.webp",
+            "Sources/Images/Rolls/_NVT4543.webp",
+            "Sources/Images/Rolls/_NVT4651.webp",
+            "Sources/Images/Rolls/_NVT4666.webp",
+            "Sources/Images/Rolls/_NVT4679.webp",
+            "Sources/Images/Rolls/_NVT4701.webp",
+            "Sources/Images/Rolls/_NVT4739.webp",
+            "Sources/Images/Rolls/_NVT4758.webp",
+        ];
+
+        const row = document.getElementById("images");
+
+        // Calculate how many cells are needed to fill the width
+        const cellWidth = 150; // (110 image + 22 margin left + 22 margin right)
+        const count = Math.ceil(window.innerWidth / cellWidth) * 2;
+
+        for (let i = 0; i < count; i++) {
+            const cell = document.createElement("div");
+            cell.className = "cell";
+
+            // pick image in order
+            const imgIndex = i % imgs.length; // cycles through 0..imgs.length-1
+            cell.style.backgroundImage = `url("${imgs[imgIndex]}")`;
+
+            row.appendChild(cell);
+        }
+    </script>
 
     <script>
         // Scroll animation
