--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
         }
 
         .groom-photo {
-            background-image: url('Sources/Images/_NVT4543-2.webp');
+            background-image: url('../Sources/Images/_NVT4543-2.webp');
         }
 
         .bride-photo {
-            background-image: url('Sources/Images/_NVT4543-1.webp');
+            background-image: url('../Sources/Images/_NVT4543-1.webp');
         }
 
         /* ảnh cô dâu chú rể */
@@ -124,7 +124,7 @@
             position: relative;
             width: 100%;
             height: 85vh;
-            background: linear-gradient(to bottom, rgba(0,0,0,0) 60%, #000 100%), url('Sources/Images/_NVT4500.webp') center/cover no-repeat;
+            background: linear-gradient(to bottom, rgba(0,0,0,0) 60%, #000 100%), url('../Sources/Images/_NVT4500.webp') center/cover no-repeat;
             display: flex;
             flex-direction: column;
             justify-content: flex-end;
@@ -314,7 +314,7 @@
         .calendar {
             position: relative;
             color: #fff; /* example text color */
-            background: url('Sources/Images/_NVT4701.webp') center/cover no-repeat;
+            background: url('../Sources/Images/_NVT4701.webp') center/cover no-repeat;
             overflow: hidden; /* ensures overlay stays inside */
             padding: 20px;
             margin: 30px 0 0 0;
@@ -819,7 +819,7 @@
     </div>
 
     <div>
-        <img style="width:100%;" src='Sources/Images/_NVT4739.webp' />
+        <img style="width:100%;" src='../Sources/Images/_NVT4739.webp' />
     </div>
 
     <div class="family-section reveal fade-up">
@@ -918,27 +918,27 @@
     <script>
         // Images you want to use
         const imgs = [
-            "Sources/Images/Rolls/_NVT3765.webp",
-            "Sources/Images/Rolls/_NVT3825.webp",
-            "Sources/Images/Rolls/_NVT3887.webp",
-            "Sources/Images/Rolls/_NVT3955.webp",
-            "Sources/Images/Rolls/_NVT4011.webp",
-            "Sources/Images/Rolls/_NVT4120.webp",
-            "Sources/Images/Rolls/_NVT4159.webp",
-            "Sources/Images/Rolls/_NVT4203.webp",
-            "Sources/Images/Rolls/_NVT4209.webp",
-            "Sources/Images/Rolls/_NVT4216.webp",
-            "Sources/Images/Rolls/_NVT4298.webp",
-            "Sources/Images/Rolls/_NVT4457.webp",
-            "Sources/Images/Rolls/_NVT4500.webp",
-            "Sources/Images/Rolls/_NVT4536.webp",
-            "Sources/Images/Rolls/_NVT4543.webp",
-            "Sources/Images/Rolls/_NVT4651.webp",
-            "Sources/Images/Rolls/_NVT4666.webp",
-            "Sources/Images/Rolls/_NVT4679.webp",
-            "Sources/Images/Rolls/_NVT4701.webp",
-            "Sources/Images/Rolls/_NVT4739.webp",
-            "Sources/Images/Rolls/_NVT4758.webp",
+            "../Sources/Images/Rolls/_NVT3765.webp",
+            "../Sources/Images/Rolls/_NVT3825.webp",
+            "../Sources/Images/Rolls/_NVT3887.webp",
+            "../Sources/Images/Rolls/_NVT3955.webp",
+            "../Sources/Images/Rolls/_NVT4011.webp",
+            "../Sources/Images/Rolls/_NVT4120.webp",
+            "../Sources/Images/Rolls/_NVT4159.webp",
+            "../Sources/Images/Rolls/_NVT4203.webp",
+            "../Sources/Images/Rolls/_NVT4209.webp",
+            "../Sources/Images/Rolls/_NVT4216.webp",
+            "../Sources/Images/Rolls/_NVT4298.webp",
+            "../Sources/Images/Rolls/_NVT4457.webp",
+            "../Sources/Images/Rolls/_NVT4500.webp",
+            "../Sources/Images/Rolls/_NVT4536.webp",
+            "../Sources/Images/Rolls/_NVT4543.webp",
+            "../Sources/Images/Rolls/_NVT4651.webp",
+            "../Sources/Images/Rolls/_NVT4666.webp",
+            "../Sources/Images/Rolls/_NVT4679.webp",
+            "../Sources/Images/Rolls/_NVT4701.webp",
+            "../Sources/Images/Rolls/_NVT4739.webp",
+            "../Sources/Images/Rolls/_NVT4758.webp",
         ];
 
         const row = document.getElementById("images");
