--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             position: relative;
             width: 100%;
             height: 85vh;
-            background: linear-gradient(to bottom, rgba(0,0,0,0) 60%, #000 100%), url('sources/images/_NVT4500.webp') center/cover no-repeat;
+            background: linear-gradient(to bottom, rgba(0,0,0,0) 60%, #000 100%), url("sources/images/abc.webp") center/cover no-repeat;
             display: flex;
             flex-direction: column;
             justify-content: flex-end;
