--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Tinos&family=Parisienne&family=Mea+Culpa&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <link rel="stylesheet" href="styles/CoupleIntroduction.css" />
-    <link rel="stylesheet" href="styles/FamilyIntroduction.css" />
+    <link rel="stylesheet" href="Styles/FamilyIntroduction.css" />
 
     <style>
         .break-quote {
@@ -53,11 +53,11 @@
         }
 
         .groom-photo {
-            background-image: url('sources/images/_NVT4543-2.webp');
+            background-image: url('sources/images/n4543_2.webp');
         }
 
         .bride-photo {
-            background-image: url('sources/images/_NVT4543-1.webp');
+            background-image: url('sources/images/n4543_1.webp');
         }
 
         /* ảnh cô dâu chú rể */
@@ -124,7 +124,7 @@
             position: relative;
             width: 100%;
             height: 85vh;
-            background: linear-gradient(to bottom, rgba(0,0,0,0) 60%, #000 100%), url("sources/images/abc.webp") center/cover no-repeat;
+            background: linear-gradient(to bottom, rgba(0,0,0,0) 60%, #000 100%), url('sources/images/n4500.webp') center/cover no-repeat;
             display: flex;
             flex-direction: column;
             justify-content: flex-end;
@@ -314,7 +314,7 @@
         .calendar {
             position: relative;
             color: #fff; /* example text color */
-            background: url('sources/images/_NVT4701.webp') center/cover no-repeat;
+            background: url('sources/images/n4701.webp') center/cover no-repeat;
             overflow: hidden; /* ensures overlay stays inside */
             padding: 20px;
             margin: 30px 0 0 0;
@@ -819,7 +819,7 @@
     </div>
 
     <div>
-        <img style="width:100%;" src='sources/images/_NVT4739.webp' />
+        <img style="width:100%;" src='sources/images/n4739.webp' />
     </div>
 
     <div class="family-section reveal fade-up">
